Fix sorting to use locale-aware comparisons

In TreeItem, there are two compare functions, itemNameLessThan() and
itemDescriptionLessThan().
These two functions were using < operator to compare strings, which does
not consider the user's locale.

So change compare function to QString::localeAwareCompare()

TEST PLAN

Based on bug attachment, I add the Á and A to test it.

BUG: 404393
FIXED-IN: 5.16.0

Differential Revision: https://phabricator.kde.org/D20386